<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        tools:context="zieras.madproject.StudentActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmNewPass"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/current_mac"
            android:id="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/change_mac"
            android:id="@+id/textView6"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/oldMac"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/current_mac_placeholder"
            android:id="@+id/oldMac"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_above="@+id/oldMac"
            android:layout_alignParentLeft="true">

        </LinearLayout>

        <ImageView
            android:layout_gravity="center|top"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/off_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeBtn"
            android:id="@+id/bUpdate"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_below="@+id/confirmNewPass"
            android:layout_alignParentStart="true"
            android:layout_marginTop="25dp" />
    </RelativeLayout>

</RelativeLayout>