<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        tools:context="zieras.madproject.StudentActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/new_pass"
            android:id="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/imageView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/confirm_new_pass"
            android:id="@+id/textView6"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/newPass"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_gravity="center|top"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/off_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="46dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassBtn"
            android:id="@+id/bChange"
            android:layout_marginTop="33dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_below="@+id/confirmNewPass"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmNewPass"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/newPass"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>