<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <RelativeLayout
        tools:context="zieras.madproject.StudentActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editMatric"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_gravity="center|top"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:src="@drawable/off_logo"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:id="@+id/linearLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/new_name"
            android:id="@+id/textView"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/new_matric"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:id="@+id/bRegister"
            android:onClick="registerStudent"
            android:layout_below="@+id/confirmNewPass"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:backgroundTint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/new_mac"
            android:id="@+id/textView3"
            android:layout_below="@+id/editMatric"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmNewPass"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>